# command_line_typing

./: .gitignore  README.md  setup.cfg
command_line_typing/: command_line_typing.py  phrases  phrases.txt
tests/: test_command_line_typing.py
