[metadata]
name = command_line_typing
version = 0.0.0
description = Practice typing in the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/command_line_typing
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires:
    importlib-resources>=3.0;python_version<"3.7"
python_requires = >= 3.6.1

[options.package_data]
command_line_typing =
    phrases.txt

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    cl-typing = command_line_typing.command_line_typing:main